<resources>
    <string name="app_name">Soft E-Commerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="open"></string>
    <string name="close"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>
    <string name="offers">Offers</string>
    <string name="newproducts">New Products</string>
    <string name="orders">Orders</string>
    <string name="my_carts">My Carts</string>
    <string name="myorders">My Orders</string>
    <string name="mycarts">My Carts</string>
    <string name="logout">Logout</string>
    <string name="log_out">LogOut</string>
    <string name="description">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley</string>
</resources>